--- a/BookConfirmPossession/Check/ComicCheck.storyboard
+++ b/BookConfirmPossession/Check/ComicCheck.storyboard
@@ -20,6 +20,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="読み取り" id="abw-nX-hw4">
                         <barButtonItem key="backBarButtonItem" title="読みとり" id="Gly-So-CZD"/>
+                        <barButtonItem key="rightBarButtonItem" title="リスト" id="qMl-uf-SX9">
+                            <connections>
+                                <segue destination="PMu-og-Gug" kind="show" id="ATD-Cv-hLk"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
@@ -29,6 +34,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q0G-Jh-JTM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="155" y="42"/>
+        </scene>
+        <!--ScanComicList-->
+        <scene sceneID="kTb-eH-JV8">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ScanComicList" id="PMu-og-Gug" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="pUb-YE-Mq8"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vHQ-Ch-jOB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780" y="-55"/>
         </scene>
         <!--ComicCheckResult-->
         <scene sceneID="wOg-q2-mwt">
