--- a/BookConfirmPossession/List/ScanComicListCollectionViewCell.xib
+++ b/BookConfirmPossession/List/ScanComicListCollectionViewCell.xib
@@ -23,14 +23,14 @@
                             <constraint firstAttribute="width" constant="143" id="QVA-ru-bHl"/>
                         </constraints>
                     </imageView>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDA-bt-ESZ">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDA-bt-ESZ">
                         <rect key="frame" x="4" y="4" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="0eB-kp-Tvf"/>
                             <constraint firstAttribute="width" constant="30" id="fbS-Ho-OFS"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="25"/>
+                        <color key="textColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
