--- a/BookConfirmPossession/Check/ComicCheckResult.storyboard
+++ b/BookConfirmPossession/Check/ComicCheckResult.storyboard
@@ -75,9 +75,12 @@
                                     <constraint firstAttribute="height" constant="60" id="uqd-GV-l3x"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="買う">
                                     <color key="titleColor" systemColor="systemBlueColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="scanComicListBuyButton:" destination="Vip-Xy-Pxf" eventType="touchUpInside" id="d8G-h8-7wC"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W7N-hn-y9K" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
                                 <rect key="frame" x="50" y="718" width="290" height="60"/>
@@ -140,7 +143,7 @@
             <size key="intrinsicContentSize" width="180" height="42"/>
         </designable>
         <designable name="ynZ-GY-Yp7">
-            <size key="intrinsicContentSize" width="100" height="42"/>
+            <size key="intrinsicContentSize" width="60" height="42"/>
         </designable>
     </designables>
     <resources>
