--- a/BookConfirmPossession/List/ScanComicList.storyboard
+++ b/BookConfirmPossession/List/ScanComicList.storyboard
@@ -32,7 +32,7 @@
                                 </connections>
                             </collectionView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RIZ-Ri-KWT" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
-                                <rect key="frame" x="48" y="705" width="314" height="60"/>
+                                <rect key="frame" x="38" y="695" width="314" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="S7Y-Sy-6Yr"/>
                                 </constraints>
@@ -40,17 +40,6 @@
                                 <state key="normal" title="スキャンする"/>
                                 <connections>
                                     <action selector="backCheckButtonAction:" destination="nbj-cA-OIo" eventType="touchUpInside" id="uFv-z5-YiX"/>
-                                </connections>
-                            </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yNV-ys-jMY" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
-                                <rect key="frame" x="38" y="695" width="314" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="OUG-Jf-xpJ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
-                                <state key="normal" title="トップに戻る"/>
-                                <connections>
-                                    <action selector="backTopButtonAction:" destination="nbj-cA-OIo" eventType="touchUpInside" id="j9A-E7-2Gs"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DFe-de-a5S" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
@@ -84,19 +73,14 @@
                             <constraint firstItem="RIZ-Ri-KWT" firstAttribute="centerX" secondItem="AX1-dJ-YKI" secondAttribute="centerX" id="4d5-yN-Y0M"/>
                             <constraint firstItem="DFe-de-a5S" firstAttribute="leading" secondItem="uFn-DF-bJy" secondAttribute="leading" constant="38" id="6Zz-Tu-yoF"/>
                             <constraint firstItem="RoB-dG-wRG" firstAttribute="centerX" secondItem="AX1-dJ-YKI" secondAttribute="centerX" id="72v-MO-9bD"/>
-                            <constraint firstItem="yNV-ys-jMY" firstAttribute="leading" secondItem="uFn-DF-bJy" secondAttribute="leading" constant="38" id="ABq-p7-bIR"/>
-                            <constraint firstItem="uFn-DF-bJy" firstAttribute="bottom" secondItem="yNV-ys-jMY" secondAttribute="bottom" constant="55" id="AhA-Ys-978"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="bottom" secondItem="RoB-dG-wRG" secondAttribute="bottom" constant="55" id="DOn-fk-Jd9"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="bottom" secondItem="DFe-de-a5S" secondAttribute="bottom" constant="55" id="Ked-wS-8SZ"/>
                             <constraint firstItem="RoB-dG-wRG" firstAttribute="leading" secondItem="uFn-DF-bJy" secondAttribute="leading" constant="38" id="NWY-WU-wgW"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="trailing" secondItem="DFe-de-a5S" secondAttribute="trailing" constant="38" id="OpE-pT-AVj"/>
                             <constraint firstItem="Jwb-Qi-q3x" firstAttribute="top" secondItem="uFn-DF-bJy" secondAttribute="top" id="StM-Rw-xKB"/>
-                            <constraint firstItem="yNV-ys-jMY" firstAttribute="top" secondItem="Jwb-Qi-q3x" secondAttribute="bottom" constant="28" id="Szr-M5-Rsk"/>
-                            <constraint firstItem="yNV-ys-jMY" firstAttribute="centerX" secondItem="AX1-dJ-YKI" secondAttribute="centerX" id="TNy-XF-HiH"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="trailing" secondItem="RIZ-Ri-KWT" secondAttribute="trailing" constant="38" id="ZQV-i1-GU8"/>
                             <constraint firstItem="RIZ-Ri-KWT" firstAttribute="leading" secondItem="uFn-DF-bJy" secondAttribute="leading" constant="38" id="bDd-N7-0Tp"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="bottom" secondItem="RIZ-Ri-KWT" secondAttribute="bottom" constant="55" id="eKh-SB-bqg"/>
-                            <constraint firstItem="uFn-DF-bJy" firstAttribute="trailing" secondItem="yNV-ys-jMY" secondAttribute="trailing" constant="38" id="fSz-5K-9Rc"/>
                             <constraint firstItem="RIZ-Ri-KWT" firstAttribute="top" secondItem="Jwb-Qi-q3x" secondAttribute="bottom" constant="28" id="gG6-DT-RL9"/>
                             <constraint firstItem="uFn-DF-bJy" firstAttribute="trailing" secondItem="Jwb-Qi-q3x" secondAttribute="trailing" id="iuA-j2-6Fz"/>
                             <constraint firstItem="DFe-de-a5S" firstAttribute="top" secondItem="Jwb-Qi-q3x" secondAttribute="bottom" constant="28" id="lQb-gb-8ch"/>
@@ -108,26 +92,36 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="backCheckButton" destination="RIZ-Ri-KWT" id="NUa-yQ-85e"/>
-                        <outlet property="backTopButton" destination="yNV-ys-jMY" id="jU6-x8-7DJ"/>
                         <outlet property="scanComicListBuyButton" destination="RoB-dG-wRG" id="rGd-1B-RRc"/>
                         <outlet property="scanComicListCollectionView" destination="Jwb-Qi-q3x" id="pot-YG-cdD"/>
                         <outlet property="scanComicListDeleteButton" destination="DFe-de-a5S" id="h89-oA-5cU"/>
+                        <segue destination="Bsb-N0-HRh" kind="show" id="3WM-tA-rXA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9uR-34-sg6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="124.61538461538461" y="185.54502369668245"/>
         </scene>
+        <!--ScanComicSaveCompleted-->
+        <scene sceneID="oqU-d7-jhN">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ScanComicSaveCompleted" id="Bsb-N0-HRh" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="U6H-ps-pcf"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x5I-Pp-30j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1005" y="155"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="DFe-de-a5S">
             <size key="intrinsicContentSize" width="60" height="42"/>
         </designable>
+        <designable name="RIZ-Ri-KWT">
+            <size key="intrinsicContentSize" width="179" height="42"/>
+        </designable>
         <designable name="RoB-dG-wRG">
             <size key="intrinsicContentSize" width="60" height="42"/>
-        </designable>
-        <designable name="yNV-ys-jMY">
-            <size key="intrinsicContentSize" width="178" height="42"/>
         </designable>
     </designables>
     <resources>
