--- a/BookConfirmPossession/History/History.storyboard
+++ b/BookConfirmPossession/History/History.storyboard
@@ -16,29 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="25q-ln-yqu" customClass="ComicListCollectionView" customModule="BookConfirmPossession" customModuleProvider="target">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ARy-I4-lKg">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="cOZ-bG-izA">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="wNx-GW-ayY">
+                                    <size key="itemSize" width="143" height="203"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="42" minY="30" maxX="42" maxY="30"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
                                 <connections>
-                                    <outlet property="dataSource" destination="GiB-aU-ynP" id="vgC-7L-GF1"/>
-                                    <outlet property="delegate" destination="GiB-aU-ynP" id="0Ge-0h-YJT"/>
+                                    <outlet property="dataSource" destination="GiB-aU-ynP" id="tx6-yQ-cZb"/>
+                                    <outlet property="delegate" destination="GiB-aU-ynP" id="Gve-0h-QEO"/>
                                 </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rve-h5-FKL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="25q-ln-yqu" firstAttribute="leading" secondItem="Rve-h5-FKL" secondAttribute="leading" id="AIm-6O-jil"/>
-                            <constraint firstItem="Rve-h5-FKL" firstAttribute="trailing" secondItem="25q-ln-yqu" secondAttribute="trailing" id="FsW-U7-oXf"/>
-                            <constraint firstItem="25q-ln-yqu" firstAttribute="top" secondItem="Rve-h5-FKL" secondAttribute="top" id="Ov1-9F-PDl"/>
-                            <constraint firstItem="Rve-h5-FKL" firstAttribute="bottom" secondItem="25q-ln-yqu" secondAttribute="bottom" id="OzS-ZV-G3g"/>
+                            <constraint firstItem="Rve-h5-FKL" firstAttribute="bottom" secondItem="ARy-I4-lKg" secondAttribute="bottom" id="0EZ-Ch-h9E"/>
+                            <constraint firstItem="Rve-h5-FKL" firstAttribute="trailing" secondItem="ARy-I4-lKg" secondAttribute="trailing" id="C4b-rq-8IP"/>
+                            <constraint firstItem="ARy-I4-lKg" firstAttribute="leading" secondItem="Rve-h5-FKL" secondAttribute="leading" id="RYL-LE-ur2"/>
+                            <constraint firstItem="ARy-I4-lKg" firstAttribute="top" secondItem="Rve-h5-FKL" secondAttribute="top" id="ukU-hF-73a"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="履歴" id="P44-YY-rnD">
@@ -46,8 +46,8 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="historyCollectionView" destination="25q-ln-yqu" id="7sr-9u-5Mw"/>
-                        <segue destination="fhy-Xz-gBa" kind="show" identifier="toHistoryDetail" id="0x2-ty-KRL"/>
+                        <outlet property="scanComicListCollectionView" destination="ARy-I4-lKg" id="CoW-WD-S5V"/>
+                        <segue destination="fhy-Xz-gBa" kind="show" identifier="" id="0x2-ty-KRL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="134-ax-m0m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -57,10 +57,10 @@
         <!--HistoryDetail-->
         <scene sceneID="CPf-cQ-hCl">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Lhh-5W-3pC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="HistoryDetail" id="fhy-Xz-gBa" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="4kx-T5-nrS"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lhh-5W-3pC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1138" y="52"/>
         </scene>
