--- a/BookConfirmPossession/History/History.storyboard
+++ b/BookConfirmPossession/History/History.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GiB-aU-ynP">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="fullScreen" id="GiB-aU-ynP" customClass="HistoryViewController" customModule="BookConfirmPossession" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2I5-4g-Zan">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ARy-I4-lKg">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="579"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="wNx-GW-ayY">
                                     <size key="itemSize" width="143" height="203"/>
@@ -31,13 +31,28 @@
                                     <outlet property="delegate" destination="GiB-aU-ynP" id="Gve-0h-QEO"/>
                                 </connections>
                             </collectionView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhp-Wz-bR1" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
+                                <rect key="frame" x="38" y="695" width="314" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="O1l-sg-4tG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
+                                <state key="normal" title="削除"/>
+                                <connections>
+                                    <action selector="historyComicListDeleteButtonAction:" destination="GiB-aU-ynP" eventType="touchUpInside" id="ilj-B4-d0Y"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rve-h5-FKL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Rve-h5-FKL" firstAttribute="bottom" secondItem="ARy-I4-lKg" secondAttribute="bottom" id="0EZ-Ch-h9E"/>
+                            <constraint firstItem="Hhp-Wz-bR1" firstAttribute="top" secondItem="ARy-I4-lKg" secondAttribute="bottom" constant="28" id="94a-RB-dgq"/>
                             <constraint firstItem="Rve-h5-FKL" firstAttribute="trailing" secondItem="ARy-I4-lKg" secondAttribute="trailing" id="C4b-rq-8IP"/>
+                            <constraint firstItem="Hhp-Wz-bR1" firstAttribute="leading" secondItem="Rve-h5-FKL" secondAttribute="leading" constant="38" id="Cri-2S-dCQ"/>
                             <constraint firstItem="ARy-I4-lKg" firstAttribute="leading" secondItem="Rve-h5-FKL" secondAttribute="leading" id="RYL-LE-ur2"/>
+                            <constraint firstItem="Rve-h5-FKL" firstAttribute="bottom" secondItem="Hhp-Wz-bR1" secondAttribute="bottom" constant="55" id="dTW-ro-ucZ"/>
+                            <constraint firstItem="Hhp-Wz-bR1" firstAttribute="centerX" secondItem="2I5-4g-Zan" secondAttribute="centerX" id="sVt-fG-uKh"/>
+                            <constraint firstItem="Rve-h5-FKL" firstAttribute="trailing" secondItem="Hhp-Wz-bR1" secondAttribute="trailing" constant="38" id="tFU-n7-j1D"/>
                             <constraint firstItem="ARy-I4-lKg" firstAttribute="top" secondItem="Rve-h5-FKL" secondAttribute="top" id="ukU-hF-73a"/>
                         </constraints>
                     </view>
@@ -46,13 +61,14 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="scanComicListCollectionView" destination="ARy-I4-lKg" id="CoW-WD-S5V"/>
+                        <outlet property="historyComicListCollectionView" destination="ARy-I4-lKg" id="UvK-Oh-M87"/>
+                        <outlet property="historyComicListDeleteButton" destination="Hhp-Wz-bR1" id="pa6-yh-gOd"/>
                         <segue destination="fhy-Xz-gBa" kind="show" identifier="" id="0x2-ty-KRL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="134-ax-m0m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="438" y="52"/>
+            <point key="canvasLocation" x="437.68115942028987" y="51.5625"/>
         </scene>
         <!--HistoryDetail-->
         <scene sceneID="CPf-cQ-hCl">
@@ -65,6 +81,11 @@
             <point key="canvasLocation" x="1138" y="52"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Hhp-Wz-bR1">
+            <size key="intrinsicContentSize" width="60" height="42"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
