--- a/BookConfirmPossession/Check/ComicCheckResult.storyboard
+++ b/BookConfirmPossession/Check/ComicCheckResult.storyboard
@@ -39,13 +39,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0b-al-HHX">
-                                        <rect key="frame" x="250" y="460" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="261.66666666666669" y="460" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2q-wT-92c">
-                                        <rect key="frame" x="40" y="460" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="28.666666666666671" y="460" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -53,19 +53,19 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Alz-c5-ZyO" secondAttribute="trailing" constant="10" id="5XS-0q-jW7"/>
+                                    <constraint firstItem="j2q-wT-92c" firstAttribute="leading" secondItem="SmB-z7-hWb" secondAttribute="leading" id="9Dk-ZY-7NI"/>
                                     <constraint firstItem="SmB-z7-hWb" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="Hdz-zS-BuI"/>
                                     <constraint firstItem="I0b-al-HHX" firstAttribute="top" secondItem="Alz-c5-ZyO" secondAttribute="bottom" constant="30" id="JOM-gG-NBJ"/>
                                     <constraint firstAttribute="width" constant="290" id="JPr-KS-fSr"/>
                                     <constraint firstItem="Alz-c5-ZyO" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="cxX-Ne-cde"/>
                                     <constraint firstItem="j2q-wT-92c" firstAttribute="top" secondItem="Alz-c5-ZyO" secondAttribute="bottom" constant="30" id="evL-M1-JlU"/>
                                     <constraint firstItem="SmB-z7-hWb" firstAttribute="top" secondItem="vZ5-7T-LO6" secondAttribute="bottom" constant="12" id="fcE-9F-keU"/>
-                                    <constraint firstAttribute="trailing" secondItem="I0b-al-HHX" secondAttribute="trailing" constant="40" id="g8R-Lc-02D"/>
                                     <constraint firstItem="vZ5-7T-LO6" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="iyY-qL-4zb"/>
+                                    <constraint firstItem="I0b-al-HHX" firstAttribute="trailing" secondItem="SmB-z7-hWb" secondAttribute="trailing" id="jGl-V0-ODw"/>
                                     <constraint firstItem="Alz-c5-ZyO" firstAttribute="top" secondItem="SmB-z7-hWb" secondAttribute="bottom" constant="15" id="ktx-QL-a3Z"/>
                                     <constraint firstAttribute="height" constant="500" id="oCJ-ha-gW3"/>
                                     <constraint firstItem="vZ5-7T-LO6" firstAttribute="top" secondItem="L72-he-af5" secondAttribute="top" constant="12" id="wBL-11-edJ"/>
                                     <constraint firstItem="Alz-c5-ZyO" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" constant="10" id="xU5-Uw-BQP"/>
-                                    <constraint firstItem="j2q-wT-92c" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" constant="40" id="y1t-jK-jg3"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynZ-GY-Yp7" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
