--- a/BookConfirmPossession/Top/Base.lproj/Top.storyboard
+++ b/BookConfirmPossession/Top/Base.lproj/Top.storyboard
@@ -23,7 +23,7 @@
                                     <constraint firstAttribute="height" constant="69" id="vzN-hW-FkX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="24"/>
-                                <state key="normal" title="読みとる"/>
+                                <state key="normal" title="バーコードスキャン"/>
                                 <connections>
                                     <segue destination="H4t-9t-h0S" kind="show" identifier="toComicCheck" id="rVG-KS-Cg5"/>
                                 </connections>
@@ -90,6 +90,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="heH-pj-Z4z"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bbe-hA-Xz6">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -104,7 +105,7 @@
     </scenes>
     <designables>
         <designable name="GI1-q3-img">
-            <size key="intrinsicContentSize" width="96" height="36"/>
+            <size key="intrinsicContentSize" width="212" height="36"/>
         </designable>
         <designable name="lMF-Ac-zNg">
             <size key="intrinsicContentSize" width="48" height="36"/>
