--- a/BookConfirmPossession/Check/ComicCheckResult.storyboard
+++ b/BookConfirmPossession/Check/ComicCheckResult.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vip-Xy-Pxf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vip-Xy-Pxf">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,61 +17,57 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L72-he-af5" customClass="NeumorphismView" customModule="BookConfirmPossession" customModuleProvider="target">
-                                <rect key="frame" x="50" y="108" width="290" height="500"/>
+                                <rect key="frame" x="38" y="108" width="314" height="490"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZ5-7T-LO6">
-                                        <rect key="frame" x="105" y="12" width="80" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZ5-7T-LO6">
+                                        <rect key="frame" x="30" y="12" width="254" height="30"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SmB-z7-hWb">
-                                        <rect key="frame" x="28.666666666666686" y="54" width="233" height="331"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="233" id="ufp-Ih-Odl"/>
-                                            <constraint firstAttribute="height" constant="331" id="wcf-R8-rzr"/>
-                                        </constraints>
+                                        <rect key="frame" x="41" y="54" width="232" height="302"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Alz-c5-ZyO">
-                                        <rect key="frame" x="10" y="400" width="270" height="30"/>
+                                        <rect key="frame" x="41" y="371" width="232" height="30"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0b-al-HHX">
-                                        <rect key="frame" x="261.66666666666669" y="460" width="0.0" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/06/09" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0b-al-HHX">
+                                        <rect key="frame" x="162" y="431" width="111" height="18"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2q-wT-92c">
-                                        <rect key="frame" x="28.666666666666671" y="460" width="0.0" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="発売日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2q-wT-92c">
+                                        <rect key="frame" x="41" y="431" width="54" height="18"/>
                                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Alz-c5-ZyO" secondAttribute="trailing" constant="10" id="5XS-0q-jW7"/>
+                                    <constraint firstItem="Alz-c5-ZyO" firstAttribute="leading" secondItem="SmB-z7-hWb" secondAttribute="leading" id="1Yw-P2-AgE"/>
+                                    <constraint firstAttribute="trailing" secondItem="SmB-z7-hWb" secondAttribute="trailing" constant="41" id="4lC-Av-OLm"/>
                                     <constraint firstItem="j2q-wT-92c" firstAttribute="leading" secondItem="SmB-z7-hWb" secondAttribute="leading" id="9Dk-ZY-7NI"/>
-                                    <constraint firstItem="SmB-z7-hWb" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="Hdz-zS-BuI"/>
                                     <constraint firstItem="I0b-al-HHX" firstAttribute="top" secondItem="Alz-c5-ZyO" secondAttribute="bottom" constant="30" id="JOM-gG-NBJ"/>
-                                    <constraint firstAttribute="width" constant="290" id="JPr-KS-fSr"/>
+                                    <constraint firstItem="SmB-z7-hWb" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" constant="41" id="UJl-Gf-xvd"/>
+                                    <constraint firstItem="vZ5-7T-LO6" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" constant="30" id="bet-5m-MEP"/>
                                     <constraint firstItem="Alz-c5-ZyO" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="cxX-Ne-cde"/>
                                     <constraint firstItem="j2q-wT-92c" firstAttribute="top" secondItem="Alz-c5-ZyO" secondAttribute="bottom" constant="30" id="evL-M1-JlU"/>
                                     <constraint firstItem="SmB-z7-hWb" firstAttribute="top" secondItem="vZ5-7T-LO6" secondAttribute="bottom" constant="12" id="fcE-9F-keU"/>
-                                    <constraint firstItem="vZ5-7T-LO6" firstAttribute="centerX" secondItem="L72-he-af5" secondAttribute="centerX" id="iyY-qL-4zb"/>
                                     <constraint firstItem="I0b-al-HHX" firstAttribute="trailing" secondItem="SmB-z7-hWb" secondAttribute="trailing" id="jGl-V0-ODw"/>
                                     <constraint firstItem="Alz-c5-ZyO" firstAttribute="top" secondItem="SmB-z7-hWb" secondAttribute="bottom" constant="15" id="ktx-QL-a3Z"/>
-                                    <constraint firstAttribute="height" constant="500" id="oCJ-ha-gW3"/>
+                                    <constraint firstAttribute="trailing" secondItem="vZ5-7T-LO6" secondAttribute="trailing" constant="30" id="lNl-In-pRe"/>
+                                    <constraint firstAttribute="bottom" secondItem="j2q-wT-92c" secondAttribute="bottom" constant="41" id="q3G-Yb-Vni"/>
+                                    <constraint firstItem="Alz-c5-ZyO" firstAttribute="trailing" secondItem="SmB-z7-hWb" secondAttribute="trailing" id="sry-gc-dXF"/>
                                     <constraint firstItem="vZ5-7T-LO6" firstAttribute="top" secondItem="L72-he-af5" secondAttribute="top" constant="12" id="wBL-11-edJ"/>
-                                    <constraint firstItem="Alz-c5-ZyO" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" constant="10" id="xU5-Uw-BQP"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynZ-GY-Yp7" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
-                                <rect key="frame" x="50" y="638" width="290" height="60"/>
+                                <rect key="frame" x="38" y="628" width="314" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="290" id="9fB-sx-5RA"/>
                                     <constraint firstAttribute="height" constant="60" id="uqd-GV-l3x"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
@@ -83,9 +79,8 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W7N-hn-y9K" customClass="NeumorphismButton" customModule="BookConfirmPossession" customModuleProvider="target">
-                                <rect key="frame" x="50" y="718" width="290" height="60"/>
+                                <rect key="frame" x="38" y="718" width="314" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="290" id="dtS-Up-oad"/>
                                     <constraint firstAttribute="height" constant="60" id="o1a-F1-tDt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="30"/>
@@ -98,11 +93,15 @@
                         <viewLayoutGuide key="safeArea" id="NNT-VO-tRI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="L72-he-af5" firstAttribute="centerX" secondItem="FrO-uw-dqa" secondAttribute="centerX" id="7gF-Wt-WF0"/>
-                            <constraint firstItem="ynZ-GY-Yp7" firstAttribute="centerX" secondItem="FrO-uw-dqa" secondAttribute="centerX" id="Rat-Qa-moW"/>
+                            <constraint firstItem="NNT-VO-tRI" firstAttribute="bottom" secondItem="W7N-hn-y9K" secondAttribute="bottom" constant="32" id="1WV-Ta-Muv"/>
+                            <constraint firstItem="W7N-hn-y9K" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" id="4Q5-xq-pSl"/>
+                            <constraint firstItem="ynZ-GY-Yp7" firstAttribute="leading" secondItem="L72-he-af5" secondAttribute="leading" id="CXo-9g-aHR"/>
+                            <constraint firstItem="ynZ-GY-Yp7" firstAttribute="trailing" secondItem="L72-he-af5" secondAttribute="trailing" id="M2s-HU-657"/>
                             <constraint firstItem="ynZ-GY-Yp7" firstAttribute="top" secondItem="L72-he-af5" secondAttribute="bottom" constant="30" id="Tdr-Vu-P2S"/>
-                            <constraint firstItem="W7N-hn-y9K" firstAttribute="centerX" secondItem="FrO-uw-dqa" secondAttribute="centerX" id="ced-gU-7nh"/>
-                            <constraint firstItem="W7N-hn-y9K" firstAttribute="top" secondItem="ynZ-GY-Yp7" secondAttribute="bottom" constant="20" id="ncs-aj-ZQ6"/>
+                            <constraint firstItem="L72-he-af5" firstAttribute="leading" secondItem="NNT-VO-tRI" secondAttribute="leading" constant="38" id="fPx-cf-DIE"/>
+                            <constraint firstItem="W7N-hn-y9K" firstAttribute="trailing" secondItem="L72-he-af5" secondAttribute="trailing" id="irb-vj-raw"/>
+                            <constraint firstItem="NNT-VO-tRI" firstAttribute="trailing" secondItem="L72-he-af5" secondAttribute="trailing" constant="38" id="jVw-KS-fQ4"/>
+                            <constraint firstItem="W7N-hn-y9K" firstAttribute="top" secondItem="ynZ-GY-Yp7" secondAttribute="bottom" constant="30" id="ncs-aj-ZQ6"/>
                             <constraint firstItem="L72-he-af5" firstAttribute="top" secondItem="NNT-VO-tRI" secondAttribute="top" constant="20" id="wLu-c3-dA7"/>
                         </constraints>
                     </view>
